src/main/java/com/example/timelist/error/StudentDuplicateInGroupException.java
package com.example.timelist.error;

public class StudentDuplicateInGroupException extends RuntimeException{
}
